# ElectronBase

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  README.md  SETUP.RUNNING.md  SETUP.md  TEMPLATE.md  database.rules.json  firebase.json  package.json  template.config.example.json  verify-backend-config.sh
.claude/: settings.json
admin/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
db/: realtime-db-rules.json  realtime-db-schema.md  tidb-create.sql  tidb-seed.sql
frontend/: .env.example  .gitignore  MainLayout_FIXED_WALLET.tsx  README.md  SessionList_FIXED_FINAL.tsx  SessionList_PaymentExecution_Fixed.tsx  clear-cache.html  electron.vite.config.ts  electron.vite.config.ts.save  fix-sessions.html  fix_chainname.py  fix_chainname_final.py  fix_isconnecting.py  fix_isconnecting2.py  fix_network.py  fix_sessionlist.py  localize_ui.sh  package.json  remove_duplicate_chain.py  tailwind.config.js  temp_package.json  tsconfig.node.json  vite.config.ts  vite.functions.ts  vite.web.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  snapcraft.yaml  tauri.conf.json
frontend/src-tauri/.craft/: packed-files
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md  icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
functions/: .env.example  master-data-dev.json  package.json  tsconfig.json
scripts/: bootstrap-template.mjs  build-win-appx.ps1  deploy-functions.sh  deploy-hosting.sh  generate-admin-user-sql.mjs  generate-website-firebase-config.mjs  resolve-google-credentials-path.mjs  simulate-block.sh  (+6 more)
(+221 files in other folders)
