[package]
name = "desktop_app_template"
version = "1.0.0"
edition = "2021"

[lib]
name = "desktop_app_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
tiny_http = "0.12"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
ureq = { version = "2", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
